undiscovered (at least to my knowledge) for over a decade.  I think
Bruce Walter of Cornell may have known about it, but I never heard
the details of his discovery.

Enabled the -p option for primary conversion without tone-mapping
in ra_bmp.  Also provides for XYZE input conversion to RGB.

Fixed what I consider a bug in pvalue -o when taking XYZE files on input,
where it was inappropriately undoing the exposure value so that it always
reported radiance rather than XYZ values with Y in cd/m^2.

Made it so ra_bmp only produces run-length encoded 8-bit output for
grayscale images that are tone-mapped.  This minimizes circumstances
under which output scanline order is reversed.

Fixed bug in rcalc where it sometimes wasn't parsing the input format
correctly.

=====================
Version 3.7

Fixed bug in source occluder cache which caused consistency error
for distant sources and mist materials.  (Thanks to Mark Stock for
finding the problem.)

Fixed serious bug in source drawing routines for rpict, where the edges
of light sources were appearing through obstructions.  (Thanks to Veronica
Sundstedt for pointing this out.)

(The above were included in the 3.6.1 patch release.)

Changed default temporary directory from /usr/tmp, which doesn't exist
on a lot of systems these days, to /tmp.

Eliminated many unused files and programs from the distribution, including
the following programs that were being built but no longer used:
	oki20	- printer driver for OkiMate 20 printer (B&W)
	oki20c	- printer driver for OkiMate 20 color printer
	pcwarp	- intended as more general substitute for macbetcal,
			but never quite worked
	ra_avs	- convert to & from AVS image format
	ra_bn	- convert to & from Barneyscann format
	ra_pr	- convert to & from 8-bit Sun rasterfile format
	ra_pr24	- convert to & from 24-bit Sun rasterfile format
	thf2rad	- convert GDS "things file" to Radiance scene format
If anyone is still wanting any of the above programs, let us know and we'll
reinstate it.